<resources>
    <string name="app_name">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="idea_text">Idea</string>
    <string name="important_text">Important</string>
    <string name="todo_text">To do</string>
    <string name="idea_todo">Idea | Todo</string>
    <string name="idea_important">Important | Idea</string>
    <string name="todo_important">Important | Todo</string>
    <string name="idea_todo_important">Important | Todo | Idea</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="settings_title">Settings</string>
    <string name="add_new_note">Add a new note</string>
    <string name="your_note">Saved note</string>
    <string name="note_type">Note Type</string>
    <string name="note_title">Note Title</string>
    <string name="note_description">Note Description</string>
    <string name="edit_note">Edit Note</string>
    <string name="date">Date</string>
    <string name="log_out">Log Out</string>
    <string name="sort">Sort</string>
    <string name="newest_first">Newest First</string>
    <string name="oldest_first">Oldest First</string>
    <string name="title">Title</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="deleted_notes">Deleted Notes</string>
    <string name="settings">Settings</string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="about_the_app">About the app</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="view_source_code_at_github">View source code on GitHub</string>
    <string name="send_feedback">Send feedback</string>
    <string name="app_intro">App intro</string>
    <string name="export_from_cloud">Export to the Cloud</string>
    <string name="import_to_cloud">Import from the Cloud</string>
    <string name="search">Search</string>
    <string name="importedFromCloudToast">All notes are successfully imported from the cloud</string>
    <string name="uploadedToCloudToast">All notes are successfully uploaded to the cloud</string>
    <string name="simple_to_use">Simple to use design</string>
    <string name="easy_to_navigate">Easy to navigate and organize.</string>
    <string name="intro_get_started">Get started</string>
    <string name="keep_everything_ontrack">Keep every item of your todo list on track.</string>
    <string name="organize_your_ideas">Organize your ideas</string>
    <string name="write_down_your_thoughts">Write down your ideas to keep everything on track.</string>
    <string name="login">Login</string>
    <string name="no_net_no_upload">Cannot upload to the cloud, because you are not connected to Internet!</string>
    <string name="no_signin_no_upload">Cannot upload to the cloud, because you are not signed in!</string>
    <string name="no_net_no_import">Cannot import from the cloud, because you are not connected to Internet!</string>
    <string name="no_signin_no_import">Cannot import from the cloud, because you are not signed in!</string>
    <string name="is_deleted">\" is deleted\"</string>
    <string name="undo">Undo</string>
    <string name="type_ur_search">Type here to search for notes!</string>
    <string name="first_login">First Log In to your Google Account</string>
    <string name="enter_title">Please, enter Title!</string>
    <string name="enter_description">Please, enter Description!</string>
    <string name="select_note_type">Please select at least one type of the Note!</string>
    <string name="is_deleted_permanently">\" is deleted permanently!\"</string>
    <string name="to_get_started_sign_in_with_google">To get started, sign in with Google!</string>
    <string name="skip">Skip</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="btncancel">btnCancel</string>
    <string name="email">Email</string>
    <string name="use_one_account_everywhere">Sign in with your Google account</string>
    <string name="multiple_phone">"Use one account on every device with cloud storage. "</string>
    <string name="swipe_to_delete">Swipe the note to the left to delete!</string>
    <string name="delete_account">Delete Google Account</string>
    <string name="account_deleted">All account info and data on cloud is deleted!</string>
    <string name="do_you_want_delete">Do you want to remove your Google Account from cloud?</string>
    <string name="all_notes_will_be_deleted">All your notes on the cloud storage will be deleted too!</string>
    <string name="no_signedin_account">No signed in account!</string>
</resources>